--- a/samples/cortex/mx-gcc/3-channel-m3-stm32f2xx/makefile
+++ b/samples/cortex/mx-gcc/3-channel-m3-stm32f2xx/makefile
@@ -1,26 +1,28 @@
 #+---------------------------------------------------------------------------
 #
-#  Copyright (c) 2012 Anton Gusev aka AHTOXA (HTTP://AHTOXA.NET)
+#  Copyright (c) 2015 Anton Gusev aka AHTOXA (HTTP://AHTOXA.NET)
 #
 #  File:       makefile
 #
-#  Contents:   makefile to build arm Cortex-M3 software with gcc
+#  Contents:   makefile to build arm Cortex-M3/M4 software with gcc
 #
 #----------------------------------------------------------------------------
 
 # program name
 	TARGET	= 3-channel
 
+# toolchain
 	TOOL	= arm-none-eabi-
-#	TOOL	= LC_MESSAGES=C arm-kgp-eabi-
 
 # program version
     VER_MAJOR   = 0
     VER_MINOR   = 1
 
 # compile options
-	OPTIMIZE		= -O3
-	USE_LTO			= NO
+	OPTIMIZE        = -O2
+	USE_LTO         = NO
+	USE_CPP11       = YES
+	USE_NANO_LIB    = YES
 
 # Select chip: 
 # STM32F10X_LD    : STM32 Low density devices
@@ -32,25 +34,32 @@
 # STM32F10X_CL    : STM32 Connectivity line devices
 # STM32F10X_XL    : STM32 XL-density devices
 # STM32F2XX       : STM32F2XX devices
-# STM32F4XX       : STM32F4XX devices
+# STM32F40_41xxx  : STM32F405, STM32F407, STM32F415, STM32F417 
+# STM32F427_437xx : STM32F427/STM32F437
+# STM32F429_439xx : STM32F429/STM32F439
+# STM32F401xx     : STM32F401
+
 	CHIP		= STM32F2XX
 	HSE_VALUE	= 25000000
-
-ifeq ($(CHIP),STM32F4XX)
-	MCU			= cortex-m4
-#	FPU			= -mfpu=fpv4-sp-d16 -mfloat-abi=hard
-else
-	MCU			= cortex-m3
-endif
 
 # compiler defines
     DEFS        = -D$(CHIP)
     DEFS        += -DVER_MAJOR=$(VER_MAJOR)
     DEFS        += -DVER_MINOR=$(VER_MINOR)
     DEFS        += -DHSE_VALUE=$(HSE_VALUE)
+ifneq (,$(filter STM32F4XX STM32F40_41xxx STM32F427_437xx STM32F429_439xx STM32F401xx, $(CHIP)))
+	MCU			= cortex-m4
+	FPU			= -mfpu=fpv4-sp-d16 -mfloat-abi=hard
+#	FPU			= -mfpu=fpv4-sp-d16 -mfloat-abi=softfp
+ifneq ($(CHIP),STM32F4XX)
+    DEFS        += -DSTM32F4XX
+endif
+else
+	MCU			= cortex-m3
+endif
 
 ###########################################################
-#  common part for all my cortex-m3 projects
+#  common part for all my cortex-m3/m4 projects
 ###########################################################
 
 	BASE		= .
@@ -61,7 +70,13 @@ endif
 	OBJCOPY		= $(TOOL)objcopy
 	OBJDUMP		= $(TOOL)objdump
 	SIZE		= $(TOOL)size -d
-	FLASHER		= openocd
+#	FLASHER		= openocd
+#	FLASHER		= stm32flash
+ifeq ($(OS),Windows_NT)
+	FLASHER		= ST-LINK_CLI
+else
+	FLASHER		= st-flash
+endif
 	DOXYGEN		= doxygen
 	RM			= rm -f
 	CP			= cp
@@ -74,7 +89,7 @@ endif
 	EXEDIR		= $(BASE)/exe
 	LSTDIR		= $(BASE)/lst
 	PRJDIR		= $(BASE)/prj
-	BAKDIR		= $(BASE)/bak
+	LD_SCRIPTS	= $(PRJDIR)
 
 # files
 	HEX		= $(EXEDIR)/$(TARGET).hex
@@ -85,19 +100,17 @@ endif
 	OK		= $(EXEDIR)/$(TARGET).ok
 
 # linker script (chip dependent)
-	LD_SCRIPT	= $(PRJDIR)/$(CHIP).ld
+	LD_SCRIPT	= $(CHIP).ld
 
 # scmRTOS dir
 	SCMDIR		= ../../../../scmRTOS
-# lib dir
-	LIBDIR		= ../common
+	COMMON		= ../common
  
 
 # source directories (all *.c, *.cpp and *.S files included)
 	DIRS	:= $(SRCDIR)
-	DIRS	+= $(LIBDIR)
-	DIRS	+= $(LIBDIR)/CMSIS $(LIBDIR)/CMSIS/stm32
-	DIRS	+= $(LIBDIR)/stm32 $(LIBDIR)/stm32/f2xx
+	DIRS	+= $(COMMON)/CMSIS $(COMMON)/CMSIS/stm32
+	DIRS	+= $(COMMON)/stm32 $(COMMON)/stm32/f2xx
 	DIRS	+= $(SCMDIR)/core $(SCMDIR)/port/cortex/mx-gcc
 	DIRS	+= $(SCMDIR)/ext/profiler
 # includes
@@ -117,21 +130,11 @@ endif
 	OBJS	:= $(OBJS:.S=.o)
 	OBJS	:= $(patsubst %, $(OBJDIR)/%, $(OBJS))
 
-#files to archive
-	ARCFILES	= \
-		$(SRCDIR) \
-		$(PRJDIR) \
-		$(SCMDIR) \
-		$(LIBDIR) \
-		$(BASE)/makefile \
-		$(BASE)/.cproject \
-		$(BASE)/.project
 
 # flags
 	FLAGS	= -mcpu=$(MCU) -mthumb
 	FLAGS	+= $(FPU)
 	FLAGS	+= $(INCS)
-	FLAGS	+= -MD
 	FLAGS	+= $(DEFS)
 	FLAGS	+= -Wa,-adhlns=$(addprefix $(LSTDIR)/, $(notdir $(addsuffix .lst, $(basename $<))))
 
@@ -139,16 +142,25 @@ endif
 
 	CFLAGS	= $(FLAGS)
 	CFLAGS	+= $(OPTIMIZE)
+ifneq (,$(filter-out discovery defines,$(MAKECMDGOALS)))
+	CFLAGS	+= -MD 
+endif
 	CFLAGS	+= -std=gnu99
 	CFLAGS	+= -g
 	CFLAGS	+= -pipe
 	CFLAGS	+= -ffunction-sections -fdata-sections
 	CFLAGS	+= -Wall -Wextra
 	CFLAGS	+= -Wimplicit -Wcast-align -Wpointer-arith -Wredundant-decls
-	CFLAGS	+= -Wshadow -Wcast-qual -Wcast-align -Wnested-externs -pedantic
+	CFLAGS	+= -Wshadow -Wcast-qual -Wnested-externs -pedantic
 
 	CXXFLAGS	= $(FLAGS)
 	CXXFLAGS	+= $(OPTIMIZE)
+ifneq (,$(filter-out discovery defines,$(MAKECMDGOALS)))
+	CXXFLAGS	+= -MD 
+endif
+ifeq ($(USE_CPP11),YES)
+	CXXFLAGS	+= -std=c++11
+endif
 	CXXFLAGS	+= -g
 	CXXFLAGS	+= -pipe
 	CXXFLAGS	+= -fno-exceptions -fno-rtti
@@ -158,13 +170,18 @@ endif
 	CXXFLAGS	+= -Winline
 	CXXFLAGS	+= -Wpointer-arith -Wredundant-decls
 	CXXFLAGS	+= -Wshadow -Wcast-qual -Wcast-align -pedantic
-        CXXFLAGS        += -std=c++11
 
 	LD_FLAGS	= -mcpu=$(MCU)
 	LD_FLAGS	+= -mthumb
+	LD_FLAGS	+= $(FPU)
 	LD_FLAGS	+= -nostartfiles 
+ifeq ($(USE_NANO_LIB),YES)
+	LD_FLAGS	+= --specs=nano.specs
+#	LD_FLAGS	+= -u _printf_float  
+endif
 	LD_FLAGS	+= -Wl,-Map="$(MAP)",--cref
 	LD_FLAGS	+= -Wl,--gc-sections
+	LD_FLAGS	+= -L$(LD_SCRIPTS)
 	LD_FLAGS	+= -T$(LD_SCRIPT)
 
 ifeq ($(USE_LTO),YES)
@@ -179,8 +196,9 @@ endif
 	OPENOCD_PARAMS		= -d0
 
 # interface and board/target settings (using the OOCD target-library here)
-	OPENOCD_PARAMS		+= -f interface/arm-usb-ocd.cfg 
-	OPENOCD_PARAMS		+= -f target/stm32f2x.cfg
+#	OPENOCD_PARAMS		+= -f interface/arm-usb-ocd.cfg 
+#	OPENOCD_PARAMS		+= -f $(PRJDIR)/STM32F10X.cfg
+	OPENOCD_PARAMS		+= -f board/stm32f4discovery.cfg
 	OPENOCD_PARAMS		+= -c init
 	OPENOCD_PARAMS		+= -c "sleep 200"
 
@@ -202,47 +220,71 @@ endif
 
 .SILENT :
 
-.PHONY: all start dirs build clean program reset archive docs
+.PHONY: all dirs build clean program protect reset archive docs discovery defines
 
 ############# targets
 
-all : start dirs $(ELF) $(BIN) $(LSS) $(OK)
+all : 
+	@echo --- building $(TARGET). defines: $(DEFS)
+	$(MAKE) dirs
+	$(MAKE) $(ELF)
+	$(MAKE) $(HEX)
+	$(MAKE) $(BIN)
+	$(MAKE) $(LSS)
+	$(SIZE) $(ELF)
+	@echo "Errors: none"
 
 build:
 	$(MAKE) clean
-	$(MAKE)
-
-start:
-	@echo --- building $(TARGET)
+	$(MAKE) all
 
 $(LSS): $(ELF) makefile
 	@echo --- making asm-lst...
 #	@$(OBJDUMP) -dStC $(ELF) > $(LSS)
-	@$(OBJDUMP) -dC $(ELF) > $(LSS)
+	$(OBJDUMP) -dC $(ELF) > $(LSS)
 
-$(OK): $(ELF)
-	@$(SIZE) $(ELF)
-	@echo "Errors: none"
-
-$(ELF):	$(OBJS) makefile
+$(ELF):	$(OBJS) $(LIBS) makefile
 	@echo --- linking...
 	$(LD) $(OBJS) $(LD_FLAGS) -o "$(ELF)"
 
 $(HEX): $(ELF) makefile
 	@echo --- make hex...
-	@$(OBJCOPY) -O ihex $(ELF) $(HEX)
+	$(OBJCOPY) -O ihex $(ELF) $(HEX)
 
 $(BIN): $(ELF) makefile
 	@echo --- make bin...
-	@$(OBJCOPY) -O binary $(ELF) $(BIN)
+	$(OBJCOPY) -O binary $(ELF) $(BIN)
 
-program: $(ELF)
+program: $(HEX) $(BIN)
 	@echo "Programming with $(FLASHER)"
+ifeq ($(FLASHER),openocd)
 	$(FLASHER) $(OPENOCD_PARAMS_LOAD)
+endif
+ifeq ($(FLASHER),st-flash)
+	$(FLASHER) write $(BIN) 0x08000000
+endif
+ifeq ($(FLASHER),stm32flash)
+	$(FLASHER) -b 115200 -w $(HEX) -v -g 0x0 /dev/ttyS0
+#	$(FLASHER) -b 115200 -w $(HEX) -v -g 0x0 COM1
+endif
+ifeq ($(FLASHER),ST-LINK_CLI)
+#	$(FLASHER) -Q -P $(HEX) -V $(HEX) -Run
+	$(FLASHER)  -c SWD UR -Q -P $(HEX) -V "while_programming" -Run
+endif
+
+protect:
+ifeq ($(FLASHER),ST-LINK_CLI)
+	$(FLASHER)  -c SWD UR -Q -P $(HEX) -V $(HEX) -OB RDP=1
+endif
 
 reset:
 	@echo Resetting device
+ifeq ($(FLASHER),ST-LINK_CLI)
+	$(FLASHER) -Q -Rst
+endif
+ifeq ($(FLASHER),openocd)
 	$(FLASHER) $(OPENOCD_PARAMS_RESET)
+endif
 
 docs:
 	@echo Creating doxygen docs...
@@ -262,7 +304,7 @@ $(OBJDIR)/%.o: %.S makefile
 	@echo --- assembling $<...
 	$(AS) -c $(AFLAGS) -o $@ $<
 
-dirs: $(OBJDIR) $(EXEDIR) $(LSTDIR) $(BAKDIR)
+dirs: $(OBJDIR) $(EXEDIR) $(LSTDIR)
 
 $(OBJDIR):
 	-@$(MD) $(OBJDIR)
@@ -273,8 +315,6 @@ $(EXEDIR):
 $(LSTDIR):
 	-@$(MD) $(LSTDIR)
 
-$(BAKDIR):
-	-@$(MD) $(BAKDIR)
 
 clean:
 	-@$(RM) $(OBJDIR)/*.d 2>/dev/null
@@ -282,21 +322,26 @@ clean:
 	-@$(RM) $(LSTDIR)/*.lst 2>/dev/null
 	-@$(RM) $(ELF)
 	-@$(RM) $(HEX)
+	-@$(RM) $(BIN)
 	-@$(RM) $(LSS)
 	-@$(RM) $(MAP)
 
-archive:
-	@echo --- archiving...
-	7z a $(BAKDIR)/$(TARGET)_`date +%Y-%m-%d,%H-%M-%S` $(ARCFILES)
-	@echo --- done!
+#discovery target for Eclipse parser
+discovery:
+ifeq ($(extension),c)
+	@echo -- discovery for $(CC)
+	$(CC) $(INCS) $(CFLAGS) -E -P -v -dD '$(specs_file)'
+else
+	@echo -- discovery for $(CCX)
+	$(CXX) $(INCS) $(CXXFLAGS) -E -P -v -dD '$(specs_file)'
+endif
+	$(RM) spec.d
 
-ifeq (,$(findstring docs,$(MAKECMDGOALS)))
- ifeq (,$(findstring build,$(MAKECMDGOALS)))
-  ifeq (,$(findstring clean,$(MAKECMDGOALS)))
-   ifeq (,$(findstring dirs,$(MAKECMDGOALS)))
+defines:
+	$(CC) $(CFLAGS) -dM -E - < /dev/null | sort
+
+#do not include dependency info on some targets:
+ifneq (,$(filter-out docs build clean dirs discovery,$(MAKECMDGOALS)))
    -include $(wildcard $(OBJDIR)/*.d) 
    endif
-  endif
- endif
-endif
 
